add test structure for phpunit

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require-dev": {
-        "symfony/phpunit-bridge": "^5.1"
+        "symfony/phpunit-bridge": "^5.1",
+        "phpunit/phpunit": "^9.3"
     }
 }
